[package]
name = "signals_queries"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use workspace dependencies as in other samples
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
# Temporal crates
temporal-client = { workspace = true }
temporal-sdk = { workspace = true }
temporal-sdk-core = { workspace = true }
temporal-sdk-core-api = { workspace = true }
temporal-sdk-core-protos = { workspace = true }
# Local helpers
helpers = { path = "../helpers" }
futures-util = "0.3"
