[package]
name = "signals_unblock"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bring in workspace-shared dependencies
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
uuid = { workspace = true }

# Temporal crates – re-exported from workspace to guarantee same git revision
temporal-client = { workspace = true }
temporal-sdk = { workspace = true }
temporal-sdk-core = { workspace = true }
temporal-sdk-core-api = { workspace = true }
temporal-sdk-core-protos = { workspace = true }

# Local helpers
helpers = { path = "../helpers" }
