[package]
name = "activities-cancellation-heartbeating"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
nanoid = { workspace = true }
prost-wkt-types = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
temporal-client = { workspace = true }
temporal-helpers = { workspace = true }
temporal-sdk = { workspace = true }
temporal-sdk-core = { workspace = true }
temporal-sdk-core-api = { workspace = true }
temporal-sdk-core-protos = { workspace = true }
tokio = { workspace = true }
